ghc-4335c07/testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail05.stderr

overloadedrecfldsfail05.hs:7:16: error: [-Wunused-top-binds (in -Wextra, -Wunused-binds), -Werror=unused-top-binds]
    Defined but not used: ‘foo’
